more fixes
Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>