@@ -9,11 +9,6 @@
  */
 package org.eclipse.dirigible.components.data.management.endpoint;
 
-import java.sql.SQLException;
-import java.text.SimpleDateFormat;
-import java.util.Arrays;
-import java.util.Date;
-
 import org.eclipse.dirigible.commons.api.helpers.ContentTypeHelper;
 import org.eclipse.dirigible.commons.api.helpers.GsonHelper;
 import org.eclipse.dirigible.components.base.endpoint.BaseEndpoint;
@@ -23,15 +18,11 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
+
+import java.util.List;
 
 /**
  * The Class DatabaseExecutionEndpoint.
@@ -60,7 +51,7 @@ public class DatabaseExecutionEndpoint {
      */
     @GetMapping(value = "/", produces = "application/json")
     public ResponseEntity<String> getDatabases() {
-        return ResponseEntity.ok(GsonHelper.toJson(Arrays.asList("metadata")));
+        return ResponseEntity.ok(GsonHelper.toJson(List.of("metadata")));
     }
 
     /**
@@ -86,7 +77,7 @@ public class DatabaseExecutionEndpoint {
                     databaseExecutionService.executeQuery(datasource, sql, true, false, output);
                 }
             } catch (Exception e) {
-                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage());
+                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage(), e);
             }
         };
 
@@ -128,7 +119,7 @@ public class DatabaseExecutionEndpoint {
                     databaseExecutionService.executeUpdate(datasource, sql, true, false, output);
                 }
             } catch (Exception e) {
-                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage());
+                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage(), e);
             }
         };
 
@@ -170,7 +161,7 @@ public class DatabaseExecutionEndpoint {
                     databaseExecutionService.executeProcedure(datasource, sql, true, false, output);
                 }
             } catch (Exception e) {
-                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage());
+                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage(), e);
             }
         };
 
@@ -212,7 +203,7 @@ public class DatabaseExecutionEndpoint {
                     databaseExecutionService.execute(datasource, sql, true, false, output);
                 }
             } catch (Exception e) {
-                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage());
+                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage(), e);
             }
         };
 
